# RVTensor

./: CMakeLists.txt  README.md  RVMath-Spec.md  RVTensor-Spec.md
RVMath-opt/: CMakeLists.txt  RVMath-opt.cpp
RVMath-plugin/: CMakeLists.txt  RVMath-plugin.cpp
RVMath-translate/: CMakeLists.txt  RVMath-translate.cpp
RVTensor-opt/: CMakeLists.txt  RVTensor-opt.cpp
RVTensor-plugin/: RVMath-plugin.cpp
RVTensor-translate/: RVTensor-translate.cpp
include/: CMakeLists.txt
include/RVMath/: CMakeLists.txt  RVMathDialect.h  RVMathDialect.td  RVMathOps.h  RVMathOps.td  RVMathPasses.h  RVMathPasses.td  RVMathTypes.h  RVMathTypes.td
include/RVMath-c/: Dialects.h
include/RVTensor/: CMakeLists.txt  RVMathDialect.h  RVMathDialect.td  RVMathTypes.td  RVTensorDialect.h  RVTensorDialect.td  RVTensorOps.h  RVTensorOps.td  RVTensorPasses.h  RVTensorTypes.h  RVTensorTypes.td  RVTensorUtils.h
include/RVTensor-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/RVMath/: CMakeLists.txt  RVMathDialect.cpp  RVMathOps.cpp  RVMathPasses.cpp  RVMathTypes.cpp
lib/RVTensor/: CMakeLists.txt  RVMathTypes.cpp  RVTensorDialect.cpp  RVTensorOps.cpp  RVTensorPasses.cpp  RVTensorUtils.cpp
python/: CMakeLists.txt  RVMathExtension.cpp
python/mlir_rvmath/dialects/: RVMathOps.td  rvmath.py
python/mlir_rvtensor/dialects/: RVMathOps.td
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  rvtensor-capi-test.c
test/RVMath/: rvmath-opt.mlir
test/RVTensor/: dummy.mlir  rvmath-opt.mlir  rvtensor-pass-plugin.mlir  rvtensor-plugin.mlir  rvtensor-translate.mlir
test/python/: smoketest.py
